--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
     ".": "./dist/index.js"
   },
   "scripts": {
-    "clean": "rm -rf dist node_modules package-lock.json yarn.lock",
-    "build": "tsc",
-    "analyze": "tsc && node dist/analyzer/index.js",
-    "analyze:example": "tsc && node dist/analyzer/index.js --project tests/sbg-ibizatechforum-landing",
-    "features": "tsc && node dist/prompt/index.js",
-    "features:example": "tsc && node dist/prompt/index.js --project tests/sbg-ibizatechforum-landing --include src/ --limit 5 --overwrite",
-    "steps": "tsc && node dist/steps/index.js",
-    "steps:example": "tsc && node dist/steps/index.js --project cucumber/features --overwrite",
-    "runner": "tsc && node dist/runner/index.js",
-    "runner:example": "tsc && node dist/runner/index.js --project tests/sbg-ibizatechforum-landing --include src/ --limit 5 --overwrite",
-    "test:run": "yarn build && cucumber-js dist/cucumber/features --require dist/cucumber/step_definitions/**/*.js"
+    "clean": "rm -rf dist dist-cucumber node_modules package-lock.json yarn.lock",
+    "build": "tsc -p tsconfig.build.json",
+    "build:tests": "tsc -p tsconfig.tests.json",
+    "build:all": "yarn build && yarn build:tests",
+
+    "analyze": "yarn build && node dist/analyzer/index.js",
+    "analyze:example": "yarn build && node dist/analyzer/index.js --project tests/sbg-ibizatechforum-landing",
+
+    "features": "yarn build && node dist/prompt/index.js",
+    "features:example": "yarn build && node dist/prompt/index.js --project tests/sbg-ibizatechforum-landing --include src/ --limit 5 --overwrite",
+
+    "steps": "yarn build:tests && node dist-cucumber/steps/index.js",
+    "steps:example": "yarn build:tests && node dist-cucumber/steps/index.js --project cucumber/features --overwrite",
+
+    "runner": "yarn build && yarn build:tests && node dist/runner/index.js",
+    "runner:example": "yarn build && yarn build:tests && node dist/runner/index.js --project tests/sbg-ibizatechforum-landing --include src/ --limit 5 --overwrite",
+
+    "test:run": "yarn build:tests && cucumber-js dist-cucumber/features --require dist-cucumber/step_definitions/**/*.js"
   },
   "keywords": [],
   "author": "",
