--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "steps": "yarn build:tests && node dist-cucumber/steps/index.js",
     "steps:example": "yarn build:tests && node dist-cucumber/steps/index.js --project cucumber/features --overwrite",
     "runner": "yarn build && yarn build:tests && node dist/runner/index.js",
-    "runner:example": "yarn build && yarn build:tests && node dist/runner/index.js --project projects/sbg-ibizatechforum-landing --include src/ --limit 3 --overwrite --serve",
+    "runner:example": "yarn build && yarn build:tests && node dist/runner/index.js --project projects/sbg-ibizatechforum-landing --include src/ --limit 3 --serve",
     "test:run": "yarn build:tests && cucumber-js cucumber/features --require dist-cucumber/step_definitions/**/*.js"
   },
   "keywords": [],
